--- a/hosting/files/index.html
+++ b/hosting/files/index.html
@@ -12,12 +12,26 @@
     const APP_SERVICE_ID = "jobtrackerrealmapp-mlapp";
     let vueApp;
 
-    function tryLogin(email, password) {
+    async function logOut() {
+      if (vueApp && vueApp.realmuser) {
+        await vueApp.realmuser.logOut();
+        vueApp.realmuser = null;
+      }
+    }
+
+    async function tryLogin(email, password) {
       const credentials = Realm.Credentials.emailPassword(email, password);
-      /* Blank out PW on sucessful login*/
-      vueApp.realmApp.logIn(credentials)
-        .then((u) => { vueApp.realmuser = u; vueApp.fetchJobs() })
-        .catch((e) => { vueApp.message = e.error });
+      console.log("Login")
+      try {
+        vueApp.realmuser = await vueApp.realmApp.logIn(credentials);
+        if (vueApp.realmuser) {
+          getAreas();
+          fetchJobs();
+          watchForChanges();
+        }
+      } catch (e) {
+        vueApp.message = e.error
+      }
     }
 
     //Call a Server side custom function
@@ -43,8 +57,8 @@
     /* Listen for changes, for simplictyhgere just refresh on any change */
 
     async function watchForChanges() {
-      while (true) {
-        const mongo = vueApp?.realmuser?.mongoClient("mongodb-atlas");
+      if (vueApp?.realmuser && vueApp.realmuser.mongoClient) {
+        const mongo = vueApp.realmuser.mongoClient("mongodb-atlas");
         if (mongo) {
           const jobs = mongo.db("job-db").collection("Job");
           try {
@@ -54,10 +68,11 @@
             }
           } catch (e) {
             console.error(e.message)
-            //location.reload(); //Reload whole page on serious error
           }
         }
       }
+      console.log("Restart Watch")
+      setTimeout(watchForChanges, 1000);
     }
 
 
@@ -71,11 +86,11 @@
 
     function onLoad() {
       const { createApp } = Vue
-      console.log("Here")
+
       const realmApp = new Realm.App({ id: APP_SERVICE_ID });
-      console.log("Here 2")
+
       vueApp = createApp({
-        methods: { tryLogin, getAreas, createNewTask },
+        methods: { tryLogin, logOut, getAreas, createNewTask },
         data() {
           return {
             username: "dispatch",
@@ -92,10 +107,11 @@
           this.realmApp = realmApp; /* Non reactive */
         },
       }).mount("#vueapp")
-      getAreas();
-      fetchJobs();
-      //watchForChanges();
-
+      if (vueApp.realmuser) {
+        getAreas();
+        fetchJobs();
+        watchForChanges();
+      }
     }
 
   </script>
@@ -103,13 +119,28 @@
 
 <body onLoad="onLoad()">
   <div id="vueapp">
-    
+
     <!-- Login Dialog -->
     <div v-if="!realmuser">
-      User: <input v-model="username" />
-      Password <input v-model="password" type="password">
-      <button class="btn btn-primary" @click="tryLogin(username,password)">Login</button>
-    </div> 
+      <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
+        <span class="navbar-brand">Dispatcher Overview</span>
+        <form class="form-inline  my-2 my-lg-0">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text">User</span>
+            </div>
+            <input v-model="username" />
+          </div>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text">Password</span>
+            </div>
+            <input v-model="password" type="password">
+          </div>
+          <button type="button" class="btn btn-primary" @click="tryLogin(username,password)">Login</button>
+        </form>
+      </nav>
+    </div>
 
     <!-- App-->
     <div v-else>
@@ -120,32 +151,36 @@
             <div class="input-group-prepend">
               <span class="input-group-text">Area</span>
             </div>
-            <select  class="form-control mr-sm-2" v-model="area">
-            <option v-for="area in areas"> {{area.name}} </option>
-          </select>
-        </div>
-          <input style="min-width: 40vw" class="form-control mr-sm-2" v-model="desc" type="description" placeholder="description of new task"
-            aria-label="description">
-          <button :disabled="desc.length < 10 || area ==''" class="btn btn-primary my-2 my-sm-0"
+            <select class="form-control mr-sm-2" v-model="area">
+              <option v-for="area in areas"> {{area.name}} </option>
+            </select>
+          </div>
+          <input style="min-width: 40vw" class="form-control mr-sm-2" v-model="desc" type="description"
+            placeholder="description of new task" aria-label="description">
+          <button type="button" :disabled="desc.length < 10 || area ==''" class="btn btn-primary my-2 my-sm-0"
             @click="createNewTask()">Create Task</button>
         </form>
         <form class="form-inline my-2 my-lg-0">
-        <button class="btn btn-warning float-right" @click="realmuser.logOut();realmuser=null;">Logout</button>
-          </form>
+          <button type="button" class="btn btn-warning float-right" @click="logOut()">Logout</button>
+        </form>
       </nav>
+
+      <table class="table table-sm table-bordered">
+        <tr>
+          <th v-for="header in ['Time','Description','Status','Area','User']">{{header}}</th>
+        </tr>
+        <tr :class="{UNASSIGNED:'table-danger',ACCEPTED:'table-success',DONE:'table-info'}[job.status]"
+          v-for="job in jobs">
+          <td>{{job.creationDate.toLocaleString()}}</td>
+          <td v-for="fname in ['desc','status','area','user']">{{job[fname]}}</td>
+        </tr>
+      </table>
+
     </div>
 
-  
+
     <div class="message">{{message}}</div>
-    <table class="table table-sm table-bordered">
-      <tr>
-        <th v-for="header in ['Time','Description','Status','Area','User']">{{header}}</th>
-      </tr>
-      <tr :class="{UNASSIGNED:'table-danger',ACCEPTED:'table-success',DONE:'table-info'}[job.status]" v-for="job in jobs">
-        <td>{{job.creationDate.toLocaleString()}}</td>
-        <td v-for="fname in ['desc','status','area','user']">{{job[fname]}}</td>
-      </tr>
-    </table>
+
   </div>
 
   </div>
