Disables extra values

--- a/hosting/files/booth.html
+++ b/hosting/files/booth.html
@@ -100,6 +100,9 @@
                     <span  class="navbar-brand  text-light">Atlas Device Sync</span>
                     <select class="form-control mr-sm-2 w-25">
                     <option > Kotlin - Android </option>
+                    <option disabled> Java - Android </option>
+                    <option disabled> Swift - IOS </option>
+                    <option disabled> Flutter </option>
                 </select>
                 <button type="button" onClick="showCollections();" class="btn btn-primary ml-5"> Atlas Collections </button>
                 <button type="button" onClick="showSyncConfig();" class="btn btn-primary ml-5"> Sync Config  </button>
