--- a/hosting/files/booth.html
+++ b/hosting/files/booth.html
@@ -88,6 +88,10 @@
             window.open('https://www.mongodb.com/docs/realm/sdk/kotlin/', 'SDK');
         }
 
+        function showQR() {
+            window.open('frame.png', 'QR');
+        }
+
     </script>
 
 </head>
@@ -107,6 +111,7 @@
                 <button type="button" onClick="showCollections();" class="btn btn-primary ml-5"> Atlas Collections </button>
                 <button type="button" onClick="showSyncConfig();" class="btn btn-primary ml-5"> Sync Config  </button>
                 <button type="button" onClick="showSDK();" class="btn btn-primary ml-5"> SDK Docs  </button>
+                <button type="button" onClick="showQR();" class="btn btn-primary ml-5"> Install Android App</button>
                 </nav>
             </div>
         </div>
