--- a/hosting/files/booth.html
+++ b/hosting/files/booth.html
@@ -61,11 +61,14 @@
         { img: "applogin", x: 61, y: 65, w: 10, h: 5, action: `code:login` },
 
         { img: "signup",  x: 39.5, y: 66, w: 20, h: 5, action: "screen:applogin" },
+        { img: "signup", x: 61, y: 65, w: 10, h: 5, action: `code:signup` },
 
         { img: "onetask", x: 82, y: 43, w: 11, h: 3, action: "screen:assign" },
         { img: "onetask", x: 70, y: 26, w: 23, h: 5, action: "screen:done" },
         { img: "onetask", x: 40, y: 26, w: 23, h: 5, action: "screen:noneassigned" },
         { img: "onetask", x: 82, y: 12, w: 10, h: 5, action: "screen:eve" },
+        { img: "onetask", x: 45, y: 45, w: 10, h: 5, action: `code:model` },
+       
 
         { img: "noneassigned", x: 70, y: 26, w: 23, h: 5, action: "screen:done" },
         { img: "noneassigned", x: 10, y: 26, w: 23, h: 5, action: "screen:onetask" },
@@ -77,6 +80,7 @@
 
         { img: "assign", x: 6, y: 49, w: 23, h: 6, action: "screen:notask" },
         { img: "assign", x: 82, y: 12, w: 10, h: 5, action: "screen:eve" },
+        { img: "onetask", x: 25, y: 55, w: 10, h: 5, action: `code:assign` },
 
         { img: "notask", x: 40, y: 26, w: 23, h: 5, action: "screen:assigned" },
         { img: "notask", x: 70, y: 26, w: 23, h: 5, action: "screen:done" },
