--- a/hosting/files/booth.html
+++ b/hosting/files/booth.html
@@ -80,7 +80,7 @@
 
         { img: "assign", x: 6, y: 49, w: 23, h: 6, action: "screen:notask" },
         { img: "assign", x: 82, y: 12, w: 10, h: 5, action: "screen:eve" },
-        { img: "onetask", x: 25, y: 55, w: 10, h: 5, action: `code:assign` },
+        { img: "assign", x: 25, y: 55, w: 10, h: 5, action: `code:assign` },
 
         { img: "notask", x: 40, y: 26, w: 23, h: 5, action: "screen:assigned" },
         { img: "notask", x: 70, y: 26, w: 23, h: 5, action: "screen:done" },
