Changed Images to Jpeg so Way smaller

--- a/hosting/files/booth.html
+++ b/hosting/files/booth.html
@@ -46,9 +46,9 @@
         /* Mapping of 'screen name' to image */
 
         const images = {
-            applogin: "applogin.png", noneassigned: "noneassigned.png",eve:"eve.png",
-            onetask: "onetask.png", assigned: "assigned.png", assign: "assign.png",
-            done: "done.png", filter: "filter.png", notask: "notask.png", signup: "signup.png"
+            applogin: "applogin.jpeg", noneassigned: "noneassigned.jpeg",eve:"eve.jpeg",
+            onetask: "onetask.jpeg", assigned: "assigned.jpeg", assign: "assign.jpeg",
+            done: "done.jpeg", filter: "filter.jpeg", notask: "notask.jpeg", signup: "signup.jpeg"
         }
         /* Screen to start on*/
         const firstimage = "applogin"
@@ -177,7 +177,7 @@
         }
 
         function showQR() {
-            window.open('frame.png', 'QR');
+            window.open('frame.jpeg', 'QR');
         }
 
     </script>
