--- a/hosting/files/booth.html
+++ b/hosting/files/booth.html
@@ -90,6 +90,7 @@
         { img: "done", x: 10, y: 33, w: 50, h: 3, action: "screen:filter" },
         { img: "done",x: 10, y: 26, w: 23, h: 5, action: "screen:onetask" },
         { img: "done", x: 82, y: 12, w: 10, h: 5, action: "screen:eve" },
+        { img: "done", x: 65, y: 33, w: 10, h: 5, action: `code:filter` },
 
         { img: "filter", x: 10, y: 33, w: 50, h: 3, action: "screen:done" },
         { img: "filter",x: 10, y: 26, w: 23, h: 5, action: "screen:onetask" },
